data/forge_javadoc/1.8.9/raw/net/minecraftforge/fml/common/FMLLog.md
---
title: "FMLLog"
description: "public class FMLLog extends java.lang.Object"
package: "net/minecraftforge/fml/common"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraftforge/fml/common/FMLLog.html"
sourceType: javadoc
---

# FMLLog

**Inheritance:** java.lang.Object → net.minecraftforge.fml.common.FMLLog

## Class signature

```java
public class FMLLog extends java.lang.Object
```

## Constructors

- `FMLLog()`

## Methods

- `static void bigWarning(java.lang.String format, java.lang.Object... data)`
- `static void fine(java.lang.String format, java.lang.Object... data)`
- `static void finer(java.lang.String format, java.lang.Object... data)`
- `static Logger getLogger()`
- `static void info(java.lang.String format, java.lang.Object... data)`
- `static void log(Level level, java.lang.String format, java.lang.Object... data)`
- `static void log(Level level, java.lang.Throwable ex, java.lang.String format, java.lang.Object... data)`
- `static void log(java.lang.String targetLog, Level level, java.lang.String format, java.lang.Object... data)`
- `static void log(java.lang.String targetLog, Level level, java.lang.Throwable ex, java.lang.String format, java.lang.Object... data)`
- `static void severe(java.lang.String format, java.lang.Object... data)`
- `static void warning(java.lang.String format, java.lang.Object... data)`
